--- a/scripts/nginx/index.html
+++ b/scripts/nginx/index.html
@@ -30,7 +30,7 @@
     <script type="application/javascript">
         var params = new URLSearchParams(window.location.search);
 
-        if (params.has('access_denied')) {
+        if (params.has('error')) {
             document.getElementById("loginfailed").style.display = "block";
         }
 
